# Herta-waduh

./: .env.example  .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  README.md  config.py  config.yaml  doctor.py  main.py  requirements.txt  rust-toolchain.toml
.github/workflows/: ci.yml
actions/: system_actions.py
audio/: input.py  live.py  output.py  vad.py
brain/: memory.py
crates/herta-audio/: Cargo.toml
crates/herta-audio/src/: cpal_backend.rs  lib.rs  null_backend.rs  tone.rs  vad.rs
crates/herta-cli/: Cargo.toml
crates/herta-cli/src/: app.rs  commands.rs  lib.rs  main.rs
crates/herta-cli/tests/: cli_smoke.rs
crates/herta-config/: Cargo.toml
crates/herta-config/src/: lib.rs  schema.rs
crates/herta-config/tests/: loading.rs
crates/herta-core/: Cargo.toml
crates/herta-core/src/: audio.rs  context.rs  error.rs  health.rs  lib.rs  llm.rs  memory.rs  mocks.rs  pipeline.rs  retry.rs  stt.rs  tts.rs
crates/herta-core/tests/: pipeline_end_to_end.rs
crates/herta-llm/: Cargo.toml
crates/herta-llm/src/: common.rs  deepseek.rs  google_ai.rs  lib.rs  ollama.rs
crates/herta-memory/: Cargo.toml
crates/herta-memory/src/: json.rs  lib.rs  sled_backend.rs  sqlite.rs
crates/herta-observability/: Cargo.toml
crates/herta-observability/src/: lib.rs  metrics.rs  server.rs  tracing_init.rs
crates/herta-stt/: Cargo.toml
crates/herta-stt/src/: fallback.rs  google_ai.rs  lib.rs  local.rs  wav.rs
crates/herta-tts/: Cargo.toml
crates/herta-tts/src/: edge.rs  lib.rs  noop.rs  subprocess.rs
infra/docker/: Dockerfile  entrypoint.sh
infra/k8s/: deployment.yaml
llm/: deepseek_client.py  google_ai_client.py  google_live_client.py  ollama_client.py  qwen3_direct.Modelfile
persona/: the_herta.py
stt/: google_ai_stt.py  whisper_stt.py
tools/: applio_rvc_worker.py  herta_rvc_tts.py
tts/: edge_tts_engine.py  rvc_tts_engine.py
utils/: logger.py
