[workspace]
resolver = "3"
members = [
    "crates/herta-core",
    "crates/herta-config",
    "crates/herta-memory",
    "crates/herta-llm",
    "crates/herta-stt",
    "crates/herta-tts",
    "crates/herta-audio",
    "crates/herta-observability",
    "crates/herta-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["The Herta Voice Assistant Contributors"]
repository = "https://github.com/anomalyco/herta-waduh"
homepage = "https://github.com/anomalyco/herta-waduh"
readme = "../README.md"
keywords = ["voice-assistant", "llm", "tts", "stt", "async"]
categories = ["command-line-utilities", "multimedia::audio"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
multiple_crate_versions = "allow"

[workspace.dependencies]
# async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

# error handling
thiserror = "2.0"
anyhow = "1.0"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# http
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "gzip",
] }
url = "2.5"
bytes = "1.7"

# tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# config
config = { version = "0.15", default-features = false, features = [
    "yaml",
    "toml",
    "json",
] }
dotenvy = "0.15"

# cli
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# time / uuid
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# audio
cpal = "0.15"
hound = "3.5"
rubato = "0.16"

# persistence
rusqlite = { version = "0.32", features = ["bundled"] }
sled = "0.34"

# http server for health/metrics
axum = { version = "0.8", features = ["tokio", "http1", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
hyper = { version = "1.5", features = ["server", "http1"] }

# retries / backoff
backon = "1.2"
governor = "0.8"

# utility
base64 = "0.22"
regex = "1.11"
once_cell = "1.20"
dashmap = "6.1"
parking_lot = "0.12"
arc-swap = "1.7"
tempfile = "3.13"

# testing
mockito = "1.5"
wiremock = "0.6"
proptest = "1.5"
pretty_assertions = "1.4"
rstest = "0.23"
tokio-test = "0.4"

# internal
herta-core = { path = "crates/herta-core", version = "0.1.0" }
herta-config = { path = "crates/herta-config", version = "0.1.0" }
herta-memory = { path = "crates/herta-memory", version = "0.1.0" }
herta-llm = { path = "crates/herta-llm", version = "0.1.0" }
herta-stt = { path = "crates/herta-stt", version = "0.1.0" }
herta-tts = { path = "crates/herta-tts", version = "0.1.0" }
herta-audio = { path = "crates/herta-audio", version = "0.1.0" }
herta-observability = { path = "crates/herta-observability", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
lto = "thin"

[profile.test]
opt-level = 0
debug = true
