[package]
name = "herta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface and production entrypoint for The Herta Voice Assistant"
default-run = "herta"

[lints]
workspace = true

[[bin]]
name = "herta"
path = "src/main.rs"

[dependencies]
herta-core = { workspace = true }
herta-config = { workspace = true }
herta-memory = { workspace = true }
herta-llm = { workspace = true }
herta-stt = { workspace = true }
herta-tts = { workspace = true }
herta-audio = { workspace = true }
herta-observability = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
