[package]
name = "herta-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core abstractions, traits, pipeline orchestration, and DI for The Herta Voice Assistant"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
